Gemini Phase I Schema Changes

# Version 2025.2.1 - 2025B
##########################
* Add field telluricStars to IGRINS-2, defaulting to 'Default'

# Version 2025.1.1 - 2025A
##########################
* Add PFS instrument to Subaru

# Version 2024.2.2 - 2024B
##########################
* Update IGRINS-2 nodding options

# Version 2024.2.1 - 2024B
##########################
* Add IGRINS-2

# Version 2024.1.1 - 2024A
##########################
* No changes

# Version 2023.2.2 - 2023Bv2
##########################
* Replace GHOST target modes 'SRIFU1 Target + SRIFU2 Sky' and 'SRIFU1 Sky + SRIFU2 Target' for 'SRIFU + Sky'

# Version 2023.2.1 - 2023B
##########################
* Add a usLongTerm flag to Queue/Classical proposal

# Version 2023.1.1 - 2023A
##########################
* Support GMOS B480 Grating
* Support GHOST Blueprints
* Special proposal class can have band3 requests

# Version 2022.2.1 - 2022B
##########################
* Support ToO choice on special proposals
* Add a jwstSynergy flag to Queue/Large/FastTuranaround/Special proposal
* Add a MultiFacility entity to Queue proposals and Large Program proposals
* A Proposal can contain multiple attachments. They also have an index to identify them

# Version 2022.1.1 - 2022A
##########################
* Drop the keywords field
* Update the categories set

# Version 2020.1.1 - 2020A
##########################
* Added "Multi-messenger astrophysics" keyword
* Hide "Suprime Cam" for subaru
* Add gender field to Investigator
* Added new instrument IGRINS. (REL-3714)
* Changed TAC Category (now just Category) entries to:
  1. Planetary systems
  2. Star and planet formation
  3. Stars and stellar evolution
  4. Formation and evolution of compact objects
  5. Resolved stellar populations and their environments
  6. Galaxy evolution
  7.Cosmology and fundamental physics

  Old entries are mapped as follows:
  1. Solar System  -> Planetary systems
  2. Galactic      -> Stars and stellar evolution